# fast_od_rpi

./: README.md
decoder/: Makefile  nms_tester  nms_tester_O3
final_pipeline/: CMakeLists.txt  liveSSD_pipeline.cpp
